[bugfix]  Refactor code 20250426

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(B "${Esc}[1;34m")   #蓝色高亮
 set(Y "${Esc}[1;33m")   #黄色高亮 
 set(RB "${Esc}[1;31;40m") #红色字体黑色背景
 string(ASCII 27 Esc)
+
 set(CMAKE_CXX_STANDARD 11)
 #编译参数
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -O1 -s")
@@ -51,18 +52,19 @@ include(cmake_modules/AutoGenVer.cmake)
 
 
 
+
 #打印构建信息
 color_out(3 "build for ${BUILD_FOR}; \nbuild type ${CMAKE_BUILD_TYPE}; \npush_remote ${PUSH_REMOTE} \ncopy to package ${COPY_TO} ")
 
 
 include_directories (
-"${PROJECT_SOURCE_DIR}/public/utils/"
-"${PROJECT_SOURCE_DIR}/public/pluginsManger/"
+    "${PROJECT_SOURCE_DIR}/public/utils/"
+    "${PROJECT_SOURCE_DIR}/public/pluginsManger/"
 )
 
 # message("SRC: ${SRC}")
 # 不需要编译的就注释，不参与编译
 add_subdirectory(public)
-add_subdirectory(plugins)
-add_subdirectory(dsrc)
-add_subdirectory(test)
+# add_subdirectory(plugins)
+# add_subdirectory(dsrc)
+# add_subdirectory(test)
