[add]FRefactor code  first 1 <Proxy>  20250426

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,5 +66,5 @@ include_directories (
 # 不需要编译的就注释，不参与编译
 add_subdirectory(public)
 # add_subdirectory(plugins)
-# add_subdirectory(dsrc)
+add_subdirectory(dsrc)
 # add_subdirectory(test)
