--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,6 @@ endfunction()
 include(cmake_modules/AutoGenVer.cmake)
 
 
-
-
 #打印构建信息
 color_out(3 "build for ${BUILD_FOR}; \nbuild type ${CMAKE_BUILD_TYPE}; \npush_remote ${PUSH_REMOTE} \ncopy to package ${COPY_TO} ")
 
@@ -65,6 +63,6 @@ include_directories (
 # message("SRC: ${SRC}")
 # 不需要编译的就注释，不参与编译
 add_subdirectory(public)
-# add_subdirectory(plugins)
+add_subdirectory(plugins)
 add_subdirectory(dsrc)
 # add_subdirectory(test)
